[package]
name = "tasker"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = "0.8.0"
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"
rocket = {version = "0.4.10",  default-features = false }
serde = "1.0.130"
pwhash = "1.0.0"


[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["diesel_postgres_pool", "json"]
